# cineville_scraper

./: .gitignore  README.md  explore.ipynb  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: cineville.ipynb  filmladder.ipynb  letterboxd.ipynb  movies.ipynb  pipeline.ipynb  watch_history_pages.html
backend/data_models/: base.py  cinemas.py  init_db.py  movies.py  ratings.py  save_to_db.py  screenings.py
backend/data_pipelines/: daily_pipeline.py  explore_daily_pipeline.ipynb  pipeline.py  prototype.ipynb  save_to_db.py
backend/data_pipelines/cinema_data/: cineville_cinemas.csv
backend/data_pipelines/scrapers/: baseclass.py  filmladder.py  imdb.py  letterboxd.py  letterboxdasync.py
backend/data_pipelines/utils/: helpers.py
backend/recommendation/: api_key.py  get_followers.py  get_popular_members.py  get_ratings.py  get_users_nest.py  kernel_mf.py  kernel_mf_nb.ipynb  kernelmf.ipynb  movies_with_embeddings.csv  rag_explore.ipynb  svd_explore.ipynb  utils.py  vector_search_explore.ipynb
backend/vector_search/: vector_search.py  vector_search_explore.ipynb
cineville_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
drawio/: cineville_letterboxd_system.drawio  cineville_letterboxd_system_aws.drawio  cineville_letterboxd_system_v2.drawio  dag.drawio  table_schema.drawio
frontend/: helpers.py  st_ui.py
scripts/: download_imdb.sh  download_movies_dataset.sh
