[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cineville_scraper"
version = "0.1.0"
description = "A scraper and frontend for Cineville movie data"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "beautifulsoup4>=4.13",   # HTML parsing
    "requests>=2.32",         # HTTP requests
    "selenium>=4.29",         # Browser automation (if needed)
    "pandas>=2.2",            # Data handling
    "SQLAlchemy>=2.0",        # Database management
    "python-dotenv>=1.0",     # Environment variables (if used)
    "tqdm>=4.67",             # Progress bar (if needed)
]

[tool.setuptools]
packages = ["backend", "backend.data_models", "backend.data_pipelines", 
            "frontend", "scripts"]  # Include all submodules